<resources>
    <string name="app_name">ScholarApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Find Scholarships</string>
    <string name="second_slide_title">Request for Scholarships</string>
    <string name="third_slide_title">Apply easily</string>

    <!--Descriptions-->
    <string name="first_slide_desc">Find scholarships that match your financial needs and that you are a good fit for you. </string>
    <string name="second_slide_desc">Upvote on scholarships that you want to be granted, the most requested ones have a higher chance of being granted.</string>
    <string name="third_slide_desc">Save countless hours by applying with our easy apply.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="done_btn">Done</string>


    <string name="title_activity_student_profile">StudentProfileActivity</string>
    <string name="student_profile_fragment_label">Student Profile Fragment</string>
    <string name="edit_label_fragment_label">Edit Profile Fragment</string>
    <string name="scholarship_detail_fragment_label">Scholarship Detail Fragment</string>
    <string name="scholarship_list_fragment_label">Scholarship List Fragment</string>
    <string name="petitioned">petitioned</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_profile_message">You seem to be missing a profile. A student profile is essential to enabling us to accurately match you with the right scholarships and alert you when they become available. Please add one to continue</string>
    <string name="add_your_profile">Add your Profile</string>


</resources>